--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ footer span {
 </main>
 
 <footer>
-Made with <span❤️</span> by Laxmi Aigali  
+Made with <span>❤️</span> by Laxmi Aigali  
 </footer>
 
 <script>
