--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
   <div id="contentArea"></div>
 
-  <footer>Made with ❤️ — by MahaLaxmi Aigali</footer>
+  <footer>Made with ❤️ — by Maha</footer>
 </main>
 
 <script>
